[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"
default-run = "powers"

[[bin]]
name = "powers"
path = "src/main.rs"

#[[bin]]
#name = "server"
#path = "src/server.rs"

[dependencies]
#color-eyre = "0.6.3"
#crossterm = "0.29.0"
#ratatui = "0.30.0"
#actix-web = "4.13.0"
#serde = { version = "1.0.228", features = ["derive"] }
#env_logger = "0.11.9"
#log = "0.4.29"
